Update project configuration for new modules

--- a/randallC/randallC.vcxproj
+++ b/randallC/randallC.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ArbolUsuarios.h" />
+    <ClInclude Include="GrafoRutas.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Usuario.h" />
@@ -134,6 +135,7 @@
   <ItemGroup>
     <ClCompile Include="ArbolUsuarios.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="GrafoRutas.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
