Update project configuration and UI resources: sync .vcxproj files and add .resx layouts for InterfazGrafica, Rutas, and Usuarios

--- a/randallC/randallC.vcxproj.filters
+++ b/randallC/randallC.vcxproj.filters
@@ -35,6 +35,15 @@
     <ClInclude Include="GrafoRutas.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="InterfazGrafica.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Usuarios.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Rutas.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="randallC.cpp">
@@ -53,6 +62,15 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="GrafoRutas.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="InterfazGrafica.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Usuarios.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="RUTAS.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
