--- a/randallC/randallC.vcxproj
+++ b/randallC/randallC.vcxproj
@@ -128,14 +128,24 @@
   <ItemGroup>
     <ClInclude Include="ArbolUsuarios.h" />
     <ClInclude Include="GrafoRutas.h" />
+    <ClInclude Include="InterfazGrafica.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Rutas.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
     <ClInclude Include="Usuario.h" />
+    <ClInclude Include="Usuarios.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ArbolUsuarios.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="GrafoRutas.cpp" />
+    <ClCompile Include="InterfazGrafica.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -143,7 +153,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="randallC.cpp" />
+    <ClCompile Include="RUTAS.cpp" />
     <ClCompile Include="Usuario.cpp" />
+    <ClCompile Include="Usuarios.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
@@ -151,7 +163,20 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="InterfazGrafica.resx">
+      <DependentUpon>InterfazGrafica.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Rutas.resx">
+      <DependentUpon>Rutas.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Usuarios.resx">
+      <DependentUpon>Usuarios.h</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
