--- a/randallC/randallC.vcxproj
+++ b/randallC/randallC.vcxproj
@@ -170,6 +170,7 @@
   <ItemGroup>
     <EmbeddedResource Include="InterfazGrafica.resx">
       <DependentUpon>InterfazGrafica.h</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Rutas.resx">
       <DependentUpon>Rutas.h</DependentUpon>
